 $Id: ChangeLog,v 1.131.2.25.2.137.2.11 2010/12/08 08:55:58 uehira Exp $

2010-12-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.18 released.
	* imported win pickfile related libraries.
	* src/winpickfile.[ch] : added.
	* src/Makefile.am : libwinsystem.so (bump current & age number: 1:0:1)

2010-12-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* realloc() memory leak check.
	* src/Makefile.am : libwinsystem.so (bump revision number: 0:1:0)

2010-12-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.17 released.
	* added substitution functions :
	  src/fileblocks.c, src/memcmp.c, src/malloc.c, src/realloc.c

2010-11-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.16 released.
	* src/winlib.c : check system type using AC_CHECK_SIZEOF.
	* configure.in : for cross-compile (Linux)

2010-11-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/evdetect.c : fixed a bug.
	* src/wtape.c : conflict "SIZE_MAX" in Linux (/usr/include/stdint.h).

2010-11-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check 'statfs()' if 'struct statfs' exists.
	                 for NetBSD (appealed by K. OHTAKE)

2010-11-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.15 released.
	* create header files which can include from other sources.

2010-11-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/daily_rawdiff : added.
	* prog/windiffq : check file size.

2010-11-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/windiffq : added.

2010-11-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* make new branch 'rel-64bit_SEVO'

2010-11-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.14 released.
	* src/winlib.h : check SHM_R & SHM_W macros. (for Cygwin etc.)

2010-11-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.13 released.
	* src/order.c : system clock mode (-a) : fixed a bug.

2010-10-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.12 released.